# nested-sets

./: README.md  gtk-largeTreeStore.cabal  nested-sets.cabal
src/lib/Data/: NestedSet.hs
src/lib/GtkExtras/: LargeTreeStore.hs  NestedSet.hs
test/Data/: NestedSetSpec.hs
test/GtkExtras/: LargeTreeStoreSpec.hs  NestedSetSpec.hs
