name: nested-sets
version: 0.0.1.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: (c) Sarunas Valaskevicius
maintainer: Sarunas Valaskevicius <rakatan@gmail.com>
synopsis: Nested Sets model implementation
homepage:
stability: alpha
bug-reports: 
category:
author: Sarunas Valaskevicius

-- source-repository head
--     type: git
--     location: https://github.com/svalaskevicius/hob

library
    Exposed-modules:    Data.NestedSet
    default-language:   Haskell2010
    ghc-options:
        -Wall
    hs-source-dirs:     src/lib
    build-depends:      base >= 4.6.0.0, containers >= 0.5.5.0

test-suite spec
  type:
      exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
  build-depends:        base >= 4.6.0.0, nested-sets, hspec >= 1.11.4, containers >= 0.5.5.0

